crates/djls-project/tests/snapshots/settings_extraction__split_settings_non_star_import_resolves_imported_setting.snap
---
source: crates/djls-project/tests/settings_extraction.rs
expression: "django_settings(&db, project)"
---
installed_apps:
  values:
    - django.contrib.admin
    - blog
  extraction: full
templates:
  backends:
    - backend: ~
      dirs:
        - resolved: /proj/myproject/settings/templates
      app_dirs: true
      libraries: []
      builtins: []
      extraction: full
  extraction: full
