crates/djls-project/tests/snapshots/settings_extraction__split_settings_star_import_resolves_base_settings.snap
---
source: crates/djls-project/tests/settings_extraction.rs
expression: "django_settings(&db, project)"
---
parse_status: parsed
installed_apps:
  values:
    - django.contrib.auth
    - blog
  extraction: complete
templates:
  backends:
    - backend: ~
      dirs:
        - resolved: /proj/myproject/templates
        - resolved: /proj/myproject/local_templates
      app_dirs: true
      libraries: []
      builtins: []
      context_processors: []
      extraction: complete
  extraction: complete
staticfiles:
  static_url:
    values: []
    extraction: partial
  static_root:
    values: []
    extraction: partial
  staticfiles_dirs:
    values: []
    extraction: partial
