crates/djls-project/tests/snapshots/settings_extraction__static_root_conditional_assignment_keeps_all_candidates_partial.snap
---
source: crates/djls-project/tests/settings_extraction.rs
expression: "django_settings(&db, project)"
---
parse_status: parsed
installed_apps:
  values: []
  extraction: partial
templates:
  backends: []
  extraction: partial
staticfiles:
  static_url:
    values: []
    extraction: partial
  static_root:
    values:
      - value:
          resolved: /proj/tmp-staticfiles
        span:
          start: 145
          length: 28
      - value:
          resolved: /proj/staticfiles
        span:
          start: 90
          length: 24
    extraction: partial
  staticfiles_dirs:
    values: []
    extraction: partial
