crates/djls-project/tests/snapshots/settings_extraction__static_root_resolved_path_extracts_spanned_candidate.snap
---
source: crates/djls-project/tests/settings_extraction.rs
expression: "django_settings(&db, project)"
---
parse_status: parsed
installed_apps:
  values: []
  extraction: partial
templates:
  backends: []
  extraction: partial
staticfiles:
  static_url:
    values: []
    extraction: partial
  static_root:
    values:
      - value:
          resolved: /proj/staticfiles
        span:
          start: 90
          length: 24
    extraction: complete
  staticfiles_dirs:
    values: []
    extraction: partial
