crates/djls-project/tests/snapshots/settings_extraction__static_root_unknown_path_extracts_unknown_candidate_partial.snap
---
source: crates/djls-project/tests/settings_extraction.rs
expression: "django_settings(&db, project)"
---
parse_status: parsed
installed_apps:
  values: []
  extraction: partial
templates:
  backends: []
  extraction: partial
staticfiles:
  static_url:
    values: []
    extraction: partial
  static_root:
    values:
      - value: unknown
        span:
          start: 15
          length: 27
    extraction: partial
  staticfiles_dirs:
    values: []
    extraction: partial
