crates/djls-project/tests/snapshots/settings_extraction__static_url_literal_extracts_spanned_candidate.snap
---
source: crates/djls-project/tests/settings_extraction.rs
expression: "django_settings(&db, project)"
---
parse_status: parsed
installed_apps:
  values: []
  extraction: partial
templates:
  backends: []
  extraction: partial
staticfiles:
  static_url:
    values:
      - value: /static/
        span:
          start: 14
          length: 10
    extraction: complete
  static_root:
    values: []
    extraction: partial
  staticfiles_dirs:
    values: []
    extraction: partial
