crates/djls-project/tests/snapshots/settings_extraction__static_url_star_import_conditional_reassignment_keeps_base_candidate_partial.snap
---
source: crates/djls-project/tests/settings_extraction.rs
expression: "django_settings(&db, project)"
---
parse_status: parsed
installed_apps:
  values: []
  extraction: partial
templates:
  backends: []
  extraction: partial
staticfiles:
  static_url:
    values:
      - value: "https://cdn.example.com/static/"
        span:
          start: 50
          length: 33
      - value: /static/
        span:
          start: 14
          length: 10
    extraction: partial
  static_root:
    values: []
    extraction: partial
  staticfiles_dirs:
    values: []
    extraction: partial
