crates/djls-project/tests/snapshots/settings_extraction__staticfiles_dirs_conditional_assignment_keeps_all_candidates_partial.snap
---
source: crates/djls-project/tests/settings_extraction.rs
expression: "django_settings(&db, project)"
---
parse_status: parsed
installed_apps:
  values: []
  extraction: partial
templates:
  backends: []
  extraction: partial
staticfiles:
  static_url:
    values: []
    extraction: partial
  static_root:
    values: []
    extraction: partial
  staticfiles_dirs:
    values:
      - value:
          resolved: /proj/vendor-assets
        span:
          start: 156
          length: 26
      - value:
          resolved: /proj/assets
        span:
          start: 96
          length: 19
    extraction: partial
