crates/djls-project/tests/snapshots/settings_extraction__staticfiles_dirs_mixed_known_unknown_elements_extract_partial.snap
---
source: crates/djls-project/tests/settings_extraction.rs
expression: "django_settings(&db, project)"
---
parse_status: parsed
installed_apps:
  values: []
  extraction: partial
templates:
  backends: []
  extraction: partial
staticfiles:
  static_url:
    values: []
    extraction: partial
  static_root:
    values: []
    extraction: partial
  staticfiles_dirs:
    values:
      - value:
          resolved: /proj/assets
        span:
          start: 96
          length: 19
      - value: unknown
        span:
          start: 117
          length: 13
      - value:
          resolved: /shared/static
        span:
          start: 132
          length: 16
    extraction: partial
