crates/djls-project/tests/snapshots/settings_extraction__staticfiles_dirs_tuple_resolved_paths_extract.snap
---
source: crates/djls-project/tests/settings_extraction.rs
expression: "django_settings(&db, project)"
---
parse_status: parsed
installed_apps:
  values: []
  extraction: partial
templates:
  backends: []
  extraction: partial
staticfiles:
  static_url:
    values: []
    extraction: partial
  static_root:
    values: []
    extraction: partial
  staticfiles_dirs:
    values:
      - value:
          resolved: /proj/assets
        span:
          start: 96
          length: 19
      - value:
          resolved: /shared/static
        span:
          start: 117
          length: 16
    extraction: complete
